# fastapi-101

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 2025_05_31_1613-747895bcdcec_create_articles_table.py  2025_06_02_1908-444f8c30d7d6_create_user_table.py  2025_06_02_1923-34a1121e5c9d_create_articles_table.py  2025_06_02_2052-fecb15b1fa96_extra_fix.py  2025_06_02_2056-0c6beb4146d5_uptade_article_table.py  2025_06_02_2319-bb5002221955_fix_users_articles_tables.py  2025_06_24_1520-1b672cb1315d_create_items_table.py  2025_06_24_1528-33783a9b84e3_upgrade_users_table.py  2025_06_30_0006-3dce934fa811_initial.py
api_v1/: __init__.py
api_v1/articles/: crud.py  dependencies.py  schemas.py  views.py
api_v1/demo_auth/: demo_jwt_auth.py  utils.py
api_v1/items/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  article.py  item.py  mixins.py  profile.py  user.py
myapp/: crud.py  database.py  main.py  models.py  schemas.py
